# JianYiMusic

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc
src/main/bottom_bar/: bottom_bar.cpp  bottom_bar.css  bottom_bar.h  bottom_bar.ui
src/main/default_content/: default_content.cpp  default_content.css  default_content.h  default_content.ui
src/main/list_item/: Song.cpp  Song.h  list_item.cpp  list_item.css  list_item.h  list_item.ui  list_item_normal_even.css  list_item_normal_odd.css  list_item_press_even.css  list_item_press_odd.css
src/main/local_list/: local_list.cpp  local_list.css  local_list.h  local_list.ui
src/main/myfavo_list/: myfavo_list.cpp  myfavo_list.h  myfavo_list.ui
src/main/side_bar/: side_bar.cpp  side_bar.css  side_bar.h  side_bar.ui
src/main/song_list/: song_list.cpp  song_list.css  song_list.h  song_list.ui
src/main/top_bar/: top_bar.cpp  top_bar.css  top_bar.h  top_bar.ui
src/window_login/: window_login.cpp  window_login.css  window_login.h  window_login.ui
src/window_main/: window_main.cpp  window_main.h  window_main.ui
src/window_register/: window_register.cpp  window_register.css  window_register.h  window_register.ui
